--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
   "builds": [
     {
       "src": "index.php",
-      "use": "vercel-php@0.6.0"
+      "use": "vercel-php@0.7.1",
+      "config": { "runtime": "nodejs20.x" }
     }
   ],
   "routes": [
